Fix some tables showing some gaps in Firefox
Tables from the cart and checkout pages would show some gaps where the
table content doesn't extend to take all the available space. Not
forcing the `display` CSS property of table elements to `block` appears
to fix without adverse side effects.

--- a/app/webpacker/css/darkswarm/cart-page.scss
+++ b/app/webpacker/css/darkswarm/cart-page.scss
@@ -11,7 +11,6 @@
 
 #cart-detail {
   width: 100%;
-  display: block;
   overflow-x: auto;
 
   .cart-item-delete,
