--- a/app/webpacker/css/darkswarm/split-checkout.scss
+++ b/app/webpacker/css/darkswarm/split-checkout.scss
@@ -394,7 +394,6 @@
 }
 
 #line-items {
-  display: block;
   overflow-x: auto;
 
   h5 {
